variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:12: error: not found: value biscuit
        biscuit=biscuit+1
        ^